--- a/HYNewNest/Features(主代码)/WalletComponent/RechargeComponent/View/HYRechargeCNYEditView.xib
+++ b/HYNewNest/Features(主代码)/WalletComponent/RechargeComponent/View/HYRechargeCNYEditView.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="19162" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19144"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -23,7 +23,9 @@
                 <outlet property="depositIdBtnsContain" destination="NQW-EM-t1q" id="7fZ-sI-nbA"/>
                 <outlet property="depositIdBtnsContainH" destination="eUq-JN-okh" id="5T5-UF-YrA"/>
                 <outlet property="depositorTfView" destination="Zc7-TC-fEF" id="Hxw-XK-WfP"/>
+                <outlet property="imgvIcon" destination="1pQ-IK-tsW" id="KsX-t0-848"/>
                 <outlet property="lblPayWayName" destination="RwZ-pY-ihD" id="WTN-ri-oqv"/>
+                <outlet property="refundTip" destination="7fs-A6-rb7" id="4Ml-Ng-Z0Y"/>
                 <outlet property="tipLbl" destination="uJI-mQ-Zht" id="xAk-Du-Cvj"/>
                 <outlet property="warningLabel" destination="ZoM-2s-QMT" id="95A-42-5jk"/>
             </connections>
@@ -57,7 +59,7 @@
                     </constraints>
                 </imageView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="支付宝" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RwZ-pY-ihD">
-                    <rect key="frame" x="15" y="26.5" width="49" height="19.5"/>
+                    <rect key="frame" x="75" y="26.5" width="49" height="19.5"/>
                     <fontDescription key="fontDescription" type="system" weight="medium" pointSize="16"/>
                     <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
@@ -65,7 +67,7 @@
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="切换" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Egc-ZA-96q">
                     <rect key="frame" x="349" y="28" width="29" height="17"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <color key="textColor" red="0.42745098039215684" green="0.46666666666666667" blue="0.54509803921568623" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="OxX-xe-jFh">
@@ -170,14 +172,29 @@
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="1pQ-IK-tsW">
+                    <rect key="frame" x="12" y="12.5" width="48" height="48"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="48" id="O2N-YM-TLU"/>
+                        <constraint firstAttribute="width" constant="48" id="nWi-TV-THZ"/>
+                    </constraints>
+                </imageView>
+                <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="返利0.5%" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7fs-A6-rb7">
+                    <rect key="frame" x="132" y="29" width="53.5" height="14.5"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                    <color key="textColor" red="0.062745098039215685" green="0.70588235294117641" blue="0.8666666666666667" alpha="1" colorSpace="calibratedRGB"/>
+                    <nil key="highlightedColor"/>
+                </label>
             </subviews>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
                 <constraint firstItem="AdS-ha-nqn" firstAttribute="top" secondItem="9sI-aL-Ark" secondAttribute="bottom" id="1PR-XB-Hcy"/>
+                <constraint firstItem="uJI-mQ-Zht" firstAttribute="leading" secondItem="1pQ-IK-tsW" secondAttribute="leading" constant="3" id="2dZ-8F-CO7"/>
                 <constraint firstItem="ZoM-2s-QMT" firstAttribute="leading" secondItem="Zc7-TC-fEF" secondAttribute="leading" id="4tX-Fv-arA"/>
                 <constraint firstItem="NQW-EM-t1q" firstAttribute="leading" secondItem="Zc7-TC-fEF" secondAttribute="leading" id="7n2-cA-Z9u"/>
                 <constraint firstItem="AdS-ha-nqn" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="8v9-MN-1or"/>
+                <constraint firstItem="1pQ-IK-tsW" firstAttribute="centerY" secondItem="RwZ-pY-ihD" secondAttribute="centerY" id="Aff-MS-X64"/>
                 <constraint firstItem="NQW-EM-t1q" firstAttribute="trailing" secondItem="Zc7-TC-fEF" secondAttribute="trailing" id="AyK-W6-RC9"/>
                 <constraint firstItem="ZoM-2s-QMT" firstAttribute="top" secondItem="Zc7-TC-fEF" secondAttribute="bottom" constant="5" id="EaS-3U-3Sh"/>
                 <constraint firstItem="AdS-ha-nqn" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="EgN-DA-lXL"/>
@@ -186,11 +203,14 @@
                 <constraint firstItem="2Cf-84-UbO" firstAttribute="leading" secondItem="Zc7-TC-fEF" secondAttribute="leading" id="NNZ-Yl-8lV"/>
                 <constraint firstItem="2Cf-84-UbO" firstAttribute="trailing" secondItem="Zc7-TC-fEF" secondAttribute="trailing" id="NV0-3a-G5W"/>
                 <constraint firstItem="AdS-ha-nqn" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="70" id="QXf-im-TPm"/>
-                <constraint firstItem="RwZ-pY-ihD" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="15" id="RTP-fu-8Lu"/>
+                <constraint firstItem="RwZ-pY-ihD" firstAttribute="leading" secondItem="1pQ-IK-tsW" secondAttribute="trailing" constant="15" id="RTP-fu-8Lu"/>
                 <constraint firstItem="AdS-ha-nqn" firstAttribute="top" secondItem="RwZ-pY-ihD" secondAttribute="bottom" constant="24" id="RbF-UP-hlF"/>
+                <constraint firstItem="1pQ-IK-tsW" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="12" id="TT9-rr-C1v"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="OxX-xe-jFh" secondAttribute="trailing" constant="14" id="TYi-H1-Xtr"/>
+                <constraint firstItem="7fs-A6-rb7" firstAttribute="centerY" secondItem="RwZ-pY-ihD" secondAttribute="centerY" id="XFq-PW-F6C"/>
                 <constraint firstItem="2Cf-84-UbO" firstAttribute="leading" secondItem="OxX-xe-jFh" secondAttribute="leading" id="ZXV-r6-82p"/>
                 <constraint firstItem="Egc-ZA-96q" firstAttribute="centerY" secondItem="RwZ-pY-ihD" secondAttribute="centerY" id="ahq-93-2Rc"/>
+                <constraint firstItem="7fs-A6-rb7" firstAttribute="leading" secondItem="RwZ-pY-ihD" secondAttribute="trailing" constant="8" id="ane-nL-Of5"/>
                 <constraint firstItem="SCp-Gt-sFU" firstAttribute="top" secondItem="NQW-EM-t1q" secondAttribute="bottom" id="bAv-Ur-MRV"/>
                 <constraint firstItem="uJI-mQ-Zht" firstAttribute="top" secondItem="AdS-ha-nqn" secondAttribute="bottom" constant="5" id="cuj-Zm-Whi"/>
                 <constraint firstItem="ke3-PS-Vi3" firstAttribute="leading" secondItem="Egc-ZA-96q" secondAttribute="trailing" constant="15" id="dYQ-bU-AVu"/>
@@ -203,14 +223,13 @@
                 <constraint firstItem="AdS-ha-nqn" firstAttribute="trailing" secondItem="9sI-aL-Ark" secondAttribute="trailing" id="uWg-fq-Y7E"/>
                 <constraint firstItem="OxX-xe-jFh" firstAttribute="top" secondItem="AdS-ha-nqn" secondAttribute="bottom" constant="40" id="w5S-uh-gWV"/>
                 <constraint firstItem="ke3-PS-Vi3" firstAttribute="centerY" secondItem="Egc-ZA-96q" secondAttribute="centerY" id="w5b-2D-6D8"/>
-                <constraint firstItem="uJI-mQ-Zht" firstAttribute="leading" secondItem="RwZ-pY-ihD" secondAttribute="leading" id="wqZ-n5-VFe"/>
                 <constraint firstItem="NQW-EM-t1q" firstAttribute="top" secondItem="Zc7-TC-fEF" secondAttribute="bottom" constant="9" id="xqa-bo-kqM"/>
                 <constraint firstItem="OxX-xe-jFh" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="14" id="yoo-1e-XeQ"/>
             </constraints>
             <nil key="simulatedTopBarMetrics"/>
             <nil key="simulatedBottomBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <point key="canvasLocation" x="-225" y="-80"/>
+            <point key="canvasLocation" x="-226.08695652173915" y="-80.357142857142847"/>
         </view>
     </objects>
     <resources>
