--- a/HYNewNest/Features(主代码)/WalletComponent/MatchPay/MatchWithdraw/VC/KYMMatchWithdrewSuccessVC.xib
+++ b/HYNewNest/Features(主代码)/WalletComponent/MatchPay/MatchWithdraw/VC/KYMMatchWithdrewSuccessVC.xib
@@ -64,6 +64,15 @@
                     </attributedString>
                     <nil key="highlightedColor"/>
                 </label>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="如收到取款，请点击【确认到账】" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BSn-ik-cKB">
+                    <rect key="frame" x="0.0" y="307" width="414" height="22"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="22" id="7QI-2j-Le3"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" name="PingFangSC-Regular" family="PingFang SC" pointSize="15"/>
+                    <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <nil key="highlightedColor"/>
+                </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="您将获得0.00元取款礼金，24小时到账" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nuD-YC-dFK">
                     <rect key="frame" x="0.0" y="282" width="414" height="22"/>
                     <constraints>
@@ -93,13 +102,13 @@
                         <action selector="customerBtnClicked:" destination="-1" eventType="touchUpInside" id="f2c-a0-qMd"/>
                     </connections>
                 </button>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="如收到取款，请点击【确认到账】" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BSn-ik-cKB">
-                    <rect key="frame" x="0.0" y="307" width="414" height="22"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="如取款未到账或金额不符，请及时联系客服" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BB3-mx-SMK">
+                    <rect key="frame" x="0.0" y="423" width="414" height="22"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="22" id="7QI-2j-Le3"/>
+                        <constraint firstAttribute="height" constant="22" id="M2P-qn-hfz"/>
                     </constraints>
-                    <fontDescription key="fontDescription" name="PingFangSC-Regular" family="PingFang SC" pointSize="15"/>
-                    <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <fontDescription key="fontDescription" name="PingFangSC-Regular" family="PingFang SC" pointSize="14"/>
+                    <color key="textColor" red="0.61960784313725492" green="0.61960784313725492" blue="0.61960784313725492" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
             </subviews>
@@ -108,10 +117,12 @@
             <constraints>
                 <constraint firstItem="nuD-YC-dFK" firstAttribute="top" secondItem="xnR-2s-DtS" secondAttribute="bottom" constant="3" id="3kU-Mx-mgQ"/>
                 <constraint firstAttribute="trailing" secondItem="BSn-ik-cKB" secondAttribute="trailing" id="B65-0F-3zu"/>
+                <constraint firstItem="BB3-mx-SMK" firstAttribute="top" secondItem="6jR-97-foI" secondAttribute="bottom" constant="11" id="Bcz-Kn-ARB"/>
                 <constraint firstItem="6jR-97-foI" firstAttribute="top" secondItem="YgY-Et-QHN" secondAttribute="top" id="M7H-QO-4sb"/>
                 <constraint firstItem="BSn-ik-cKB" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" id="MGI-Tu-OcX"/>
                 <constraint firstItem="6jR-97-foI" firstAttribute="top" secondItem="BSn-ik-cKB" secondAttribute="bottom" constant="35" id="NwQ-rF-b7q"/>
                 <constraint firstItem="xnR-2s-DtS" firstAttribute="top" secondItem="Mwl-uY-0p5" secondAttribute="bottom" constant="32" id="S1j-NL-CvF"/>
+                <constraint firstItem="BB3-mx-SMK" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" id="UYb-tc-5pW"/>
                 <constraint firstItem="Mwl-uY-0p5" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="UlZ-mV-5Ou"/>
                 <constraint firstItem="Q5M-cg-NOt" firstAttribute="trailing" secondItem="xnR-2s-DtS" secondAttribute="trailing" id="YZV-56-orU"/>
                 <constraint firstItem="YgY-Et-QHN" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" constant="17" id="azo-KF-GzW"/>
@@ -119,6 +130,7 @@
                 <constraint firstItem="6jR-97-foI" firstAttribute="width" secondItem="i5M-Pr-FkT" secondAttribute="width" multiplier="0.5" constant="-27" id="gx8-rx-3W3"/>
                 <constraint firstItem="6jR-97-foI" firstAttribute="width" secondItem="YgY-Et-QHN" secondAttribute="width" id="iee-4v-OS6"/>
                 <constraint firstAttribute="trailing" secondItem="nuD-YC-dFK" secondAttribute="trailing" id="kUH-ZK-zw9"/>
+                <constraint firstItem="BB3-mx-SMK" firstAttribute="trailing" secondItem="Q5M-cg-NOt" secondAttribute="trailing" id="kpN-np-FGJ"/>
                 <constraint firstItem="xnR-2s-DtS" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" id="mCt-vX-n3Y"/>
                 <constraint firstItem="BSn-ik-cKB" firstAttribute="top" secondItem="nuD-YC-dFK" secondAttribute="bottom" constant="3" id="nTt-Cb-aNQ"/>
                 <constraint firstItem="Q5M-cg-NOt" firstAttribute="trailing" secondItem="6jR-97-foI" secondAttribute="trailing" constant="17" id="rMo-Lu-XnB"/>
