--- a/HYNewNest/Features(主代码)/ElectronComponent/View/CNElectionTypeSelectorView.xib
+++ b/HYNewNest/Features(主代码)/ElectronComponent/View/CNElectionTypeSelectorView.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="19162" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19144"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -16,12 +16,6 @@
                 <outlet property="bottom" destination="Vdi-Wj-HmU" id="3He-a5-Or2"/>
                 <outlet property="clearBtn" destination="qy2-yV-F1m" id="RAt-cB-56V"/>
                 <outlet property="submitBtn" destination="Um1-vj-t9Z" id="6R5-LZ-fPT"/>
-                <outletCollection property="hallBtnArray" destination="Wtk-tw-fOw" id="C19-3V-jNZ"/>
-                <outletCollection property="hallBtnArray" destination="psL-Nu-rkq" id="KVE-A5-bAa"/>
-                <outletCollection property="hallBtnArray" destination="Lcn-8z-qLl" id="6oz-by-oqO"/>
-                <outletCollection property="hallBtnArray" destination="dM6-rt-wlu" id="NX8-eN-YXV"/>
-                <outletCollection property="hallBtnArray" destination="IKU-G7-7Zt" id="B19-PH-e5J"/>
-                <outletCollection property="hallBtnArray" destination="RwS-6y-ZXW" id="vtA-PQ-tiq"/>
                 <outletCollection property="typeBtnArray" destination="cXu-gW-zqx" id="yIN-UT-f0S"/>
                 <outletCollection property="typeBtnArray" destination="Gyn-o1-KhK" id="DP4-JO-hV5"/>
                 <outletCollection property="typeBtnArray" destination="Mfb-ex-vrB" id="11P-TZ-iM6"/>
@@ -37,6 +31,13 @@
                 <outletCollection property="lineBtnArray" destination="uD8-UI-rKU" id="yn4-4G-GyF"/>
                 <outletCollection property="lineBtnArray" destination="rYB-kD-5PW" id="NxT-MK-u3Z"/>
                 <outletCollection property="lineBtnArray" destination="Ux9-2w-t4H" id="RNg-dR-K4Y"/>
+                <outletCollection property="hallBtnArray" destination="Lcn-8z-qLl" id="WTk-Eb-7X9"/>
+                <outletCollection property="hallBtnArray" destination="psL-Nu-rkq" id="Zkm-qq-cD7"/>
+                <outletCollection property="hallBtnArray" destination="Wtk-tw-fOw" id="zfH-9n-2Nw"/>
+                <outletCollection property="hallBtnArray" destination="dM6-rt-wlu" id="QC3-ze-NDp"/>
+                <outletCollection property="hallBtnArray" destination="IKU-G7-7Zt" id="V1b-Si-xah"/>
+                <outletCollection property="hallBtnArray" destination="RwS-6y-ZXW" id="T3A-sA-KhE"/>
+                <outletCollection property="hallBtnArray" destination="jxi-UD-RxR" id="WYP-lo-DAp"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -166,15 +167,18 @@
                                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RwS-6y-ZXW" customClass="CNSelectBtn">
                                                             <rect key="frame" x="181.5" y="0.0" width="82" height="30"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="13"/>
-                                                            <state key="normal" title="PNG"/>
+                                                            <state key="normal" title="AS"/>
                                                             <connections>
                                                                 <action selector="hallAction:" destination="-1" eventType="touchUpInside" id="qgk-Q2-Hev"/>
                                                             </connections>
                                                         </button>
-                                                        <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jxi-UD-RxR">
+                                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jxi-UD-RxR" customClass="CNSelectBtn">
                                                             <rect key="frame" x="272.5" y="0.0" width="81.5" height="30"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="13"/>
-                                                            <state key="normal" title=" "/>
+                                                            <state key="normal" title="PNG"/>
+                                                            <connections>
+                                                                <action selector="hallAction:" destination="-1" eventType="touchUpInside" id="NPV-tN-f1s"/>
+                                                            </connections>
                                                         </button>
                                                     </subviews>
                                                 </stackView>
